--- a/fake-rest-server.conf
+++ b/fake-rest-server.conf
@@ -1,4 +1,5 @@
 {
-    "PORT": 3012,
-    "DEFAULT_ROUTES_PATH": "./default_routes"
+  "PORT": 3012,
+  "DEFAULT_ROUTES_PATH": "./default_routes",
+  "LOG_DIR": "./logs"
 }
